# amr2-ros2-navigation-session

./: .gitignore  README.md
docs/: command_reference.md  ros2_basics.md  troubleshooting.md
ros2_ws/: .gitignore  README.md
ros2_ws/docker/: Dockerfile  requirements.txt
ros2_ws/src/map_updater_ros2/: .gitignore  CMakeLists.txt  package.xml
ros2_ws/src/map_updater_ros2/config/: camera_pinhole_mid360.yaml  mid360.yaml
ros2_ws/src/map_updater_ros2/include/: IMU_Processing.h  LIVMapper.h  common_lib.h  feature.h  frame.h  preprocess.h  vio.h  visual_point.h  voxel_map.h
ros2_ws/src/map_updater_ros2/include/utils/: color.h  so3_math.h  types.h
ros2_ws/src/map_updater_ros2/launch/: mapping_mid360.launch.py
ros2_ws/src/map_updater_ros2/rviz_cfg/: map_updater.rviz  pcd_eval.rviz
ros2_ws/src/map_updater_ros2/src/: IMU_Processing.cpp  LIVMapper.cpp  LIVMapper_mapping.cpp  frame.cpp  main.cpp  preprocess.cpp  vio.cpp  visual_point.cpp  voxel_map.cpp
ros2_ws/src/mobile_robot/: CMakeLists.txt  package.xml
ros2_ws/src/mobile_robot/config/: nav2_params_3d_scan_outdoor.yaml  planning_params.yaml
ros2_ws/src/mobile_robot/include/: robot_agent.h  twist_controller.h  udp_server.h
ros2_ws/src/mobile_robot/launch/: collect_data.launch.py  navigation2.launch.py  robot_bringup_launch.py  start_full_system.launch.py  udp_server.launch.py
ros2_ws/src/mobile_robot/launch/include/: nav2_bringup.launch.py  navigation_launch.py
ros2_ws/src/mobile_robot/node/: robot_agent_node.cpp  twist_controller_node.cpp  udp_server_node.cpp
ros2_ws/src/mobile_robot/rviz/: nav2.rviz
ros2_ws/src/mobile_robot/scripts/: send_nav_goal.py
ros2_ws/src/mobile_robot/src/: robot_agent.cpp  twist_controller.cpp  udp_server.cpp
